---
source: compiler-core/src/erlang/tests/bit_strings.rs
assertion_line: 84
expression: "\npub fn bitstring_discard(x) -> Bool {\n case x {\n  <<_:utf8, rest:binary>> -> True\n   _ -> False\n }\n}\n                    "
---
-module(the_app).
-compile([no_auto_import, nowarn_unused_vars]).

-export([bitstring_discard/1]).

-spec bitstring_discard(bitstring()) -> boolean().
bitstring_discard(X) ->
    case X of
        <<_/utf8, Rest/binary>> ->
            true;

        _ ->
            false
    end.

